# msl

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: upload_pypi.sh
src/msl/: __init__.py  cli.py  detection.py  devtools.py  git_tools.py  models.py  path_rules.py  scanner.py  templates.py  ui.py  writer.py
src/msl/skills/flutter/: industry_standard.md  intermediate.md  simple.md
src/msl/skills/go-server/: industry_standard.md  intermediate.md  simple.md
src/msl/skills/nextjs/: industry_standard.md  intermediate.md  simple.md
src/msl/skills/nodejs-server/: industry_standard.md  intermediate.md  simple.md
src/msl/skills/python/: industry_standard.md  intermediate.md  simple.md
src/msl/skills/react-vite/: industry_standard.md  intermediate.md  simple.md
src/msl/skills/rust-server/: industry_standard.md  intermediate.md  simple.md
tests/: test_cli.py  test_detection.py  test_devtools.py  test_git_tools.py  test_path_rules.py  test_scanner.py  test_templates.py  test_writer.py
