[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msl"
version = "0.1.0"
description = "MSL — Muradian Skill Languages: Generate platform-specific skill files for AI coding assistants"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Murad"},
]
keywords = [
    "ai", "coding-assistant", "cursor", "vscode", "claude", "codex",
    "skill", "rules", "developer-tools", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
msl = "msl.cli:main"

[project.urls]
Homepage = "https://github.com/murad/msl"
Repository = "https://github.com/murad/msl"
Issues = "https://github.com/murad/msl/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
msl = ["skills/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
